viewdocumentchanges,complete/short

--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -74,7 +74,7 @@
           <div class="form-group row">
             <label for="document" class="col-sm-2 col-form-label">Document</label>
             <div class="col-sm-10">
-              <a class="link-opacity-100-hover" (click)="checkduplicatetemplate(template)" href="javascript:void(0)">View Document</a>
+              <a class="link-opacity-100-hover" (click)="viewprint(viewdoc)" href="javascript:void(0)">View Document</a>
             </div>
           </div>
 
@@ -223,4 +223,29 @@
       </div>
     </div>
   </div>
+</ng-template>
+<ng-template #viewdoc>
+  <!-- <div class="modal-dialog" role="document"> -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">View/Print Document</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+         
+          <input type="radio" class="form-radio-input"  id="fullheader" name="fullheader"  [(ngModel)]="iscompleteheader" [value]="true">
+          <label for="username" class="form-label" style="padding-left: 10px;">Complete Header</label>
+        </div>
+        <div class="form-group">
+         
+          <input type="radio" class="form-radio-input" id="fullheader" name="fullheader"  [(ngModel)]="iscompleteheader" [value]="false">
+          <label for="password" style="padding-left: 10px;">Short Header</label>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="modalRef!.hide()">Close</button>
+        <button type="button" class="btn btn-success" (click)="previewtemplate(template,viewdoc)">Submit</button>
+      </div>
+    </div>
+  <!-- </div> -->
 </ng-template>
