--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -73,7 +73,7 @@
                    title="Approved">
                    </i>
                    <span class="mx-2"></span> 
-                   <i class="bi bi-printer-fill" title="Print" (click)="checkduplicatetemplate(template1,doc)"></i>
+                   <i class="bi bi-printer-fill" title="Print" (click)="viewprint(viewdoc,doc)"></i>
                  </td>
                </tr>
              </ng-template>
@@ -101,6 +101,31 @@
   </div>
 </ng-template>
 
+<ng-template #viewdoc>
+  <!-- <div class="modal-dialog" role="document"> -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">View/Print Document</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+         
+          <input type="radio" class="form-radio-input"  id="fullheader" name="fullheader"  [(ngModel)]="iscompleteheader" [value]="true">
+          <label for="username" class="form-label" style="padding-left: 10px;">Complete Header</label>
+        </div>
+        <div class="form-group">
+         
+          <input type="radio" class="form-radio-input" id="fullheader" name="fullheader"  [(ngModel)]="iscompleteheader" [value]="false">
+          <label for="password" style="padding-left: 10px;">Short Header</label>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="modalRef!.hide()">Close</button>
+        <button type="button" class="btn btn-success" (click)="previewtemplate(template1)">Submit</button>
+      </div>
+    </div>
+  <!-- </div> -->
+</ng-template>
 
 
 <style>
