--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -157,17 +157,17 @@
             </div>
 
             <div class="form-group row">
-              <label for="documentno" class="col-sm-2 col-form-label">Browse Document</label>
-              <div class="col-sm-10" *ngIf="!isUploaded">
+              <label for="documentno" class="col-sm-2 col-form-label" >Browse Document</label>
+              <div class="col-sm-10" *ngIf="!isUploaded && !viewMode">
                 <input type="file"  
                        class="form-control mw-350" [disabled]="viewMode"
                        id="documentno" 
                       (change)="onFileSelected($event)" accept="application/vnd.openxmlformats-officedocument.wordprocessingml.document"/>
               </div>
-              <div *ngIf="isUploaded" class="col-sm-9">
+              <div *ngIf="isUploaded || viewMode" class="col-sm-9 pull-right">
                 {{preparation.documentno}}.docx
-                <button type="button" class="btn btn-primary mx-2" (click)="previewtemplate(template)">View Documnet</button>
-                <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile()" [disabled]="viewMode">Delete</button>
+                <button type="button" class="btn btn-primary mx-2" (click)="viewprint(template,viewdoc)">View Documnet</button>
+                <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile()" [disabled]="viewMode" *ngIf="!viewMode">Delete</button>
               </div>
 
 
@@ -258,4 +258,29 @@
         </div>
       </div>
     </div>
+  </ng-template>
+  <ng-template #viewdoc>
+    <!-- <div class="modal-dialog" role="document"> -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">View/Print Document</h4>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+         
+            <input type="radio" class="form-radio-input"  id="fullheader" name="fullheader"  [(ngModel)]="iscompleteheader" [value]="true">
+            <label for="username" class="form-label" style="padding-left: 10px;">Complete Header</label>
+          </div>
+          <div class="form-group">
+           
+            <input type="radio" class="form-radio-input" id="fullheader" name="fullheader"  [(ngModel)]="iscompleteheader" [value]="false">
+            <label for="password" style="padding-left: 10px;">Short Header</label>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" (click)="modalRef!.hide()">Close</button>
+          <button type="button" class="btn btn-success" (click)="previewtemplate(template,viewdoc)">Submit</button>
+        </div>
+      </div>
+    <!-- </div> -->
   </ng-template>
