changes of issues

--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
@@ -34,6 +34,7 @@
                        name="firstname"
                        placeholder="Enter First Name"
                        [(ngModel)]="adduser.FirstName"
+                       (ngModelChange)="calculateTotalUsers()" 
                        [disabled]="editMode" 
                        pattern="[A-Za-z ]*"
                        maxlength="24"
