--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -125,7 +125,7 @@
           </div>
 
           <div class="form-group row" *ngIf="viewMode">
-            <label for="Reason" class="col-sm-2 col-form-label">Reason</label>
+            <label for="Reason" class="col-sm-2 col-form-label">Reason(s)/Remark(s)</label>
             <div class="col-sm-10">
               <textarea class="form-control mw-350" id="Reason" name="Reason" rows="3" placeholder="Reason"
                         [(ngModel)]="effective.reason" [disabled]="viewMode"></textarea>
