--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
@@ -71,7 +71,7 @@
               </td>
 
               <td>
-                <a href="javascript:void(0);" (click)="previewDocument(template,doc)">Preview</a>
+                <a href="javascript:void(0);" (click)="viewprint(viewdoc,doc)">Preview</a>
               </td>
             </tr>
           </ng-template>
@@ -98,7 +98,31 @@
   </div>
 </ng-template>
 
-
+<ng-template #viewdoc>
+  <!-- <div class="modal-dialog" role="document"> -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">View/Print Document</h4>
+      </div>
+      <div class="modal-body">
+                <div class="form-group">
+         
+          <input type="radio" class="form-radio-input"  id="fullheader" name="fullheader"  [(ngModel)]="iscompleteheader" [value]="true">
+          <label for="username" class="form-label" style="padding-left: 10px;">Complete Header</label>
+        </div>
+        <div class="form-group">
+         
+          <input type="radio" class="form-radio-input" id="fullheader" name="fullheader"  [(ngModel)]="iscompleteheader" [value]="false">
+          <label for="password" style="padding-left: 10px;">Short Header</label>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="modalRef!.hide()">Close</button>
+        <button type="button" class="btn btn-success" (click)="previewDocument(template)">Submit</button>
+      </div>
+    </div>
+  <!-- </div> -->
+</ng-template>
 
 <style>
   /* Styles for .custom-input-group */
