--- a/VlimsApp/ClientApp/src/app/modules/manager/components/auditprintgridpagew/auditprintgridpagew.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/auditprintgridpagew/auditprintgridpagew.component.html
@@ -1,4 +1,3 @@
-
 <div class="container-fluid">
     <div class="row p-2">
         <div class="col">
@@ -17,9 +16,8 @@
                         <span class="input-group-text custom-input-group-text">
                             <i class="fas fa-search custom-search-icon"></i>
                         </span>
-                        <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
+                        <input type="text" class="form-control custom-input" pInputText (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')" placeholder="Search" maxlength="250">
                     </div>
-                      
                 </div>
             </div>
         </div>
@@ -28,7 +26,7 @@
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
                 <p-table #templatesTable [value]="types" 
-                [globalFilterFields]="['Documenttypename', 'documenttypeprefix', 'Description','ModifiedBy','Status']"
+                [globalFilterFields]="['Unique', 'EntityInfo.DocumentNumber', 'EntityInfo.documenttitle', 'EntityInfo.printtype', 'EntityInfo.noofcopies', 'UserName', 'EntityInfo.CreatedDate']"
                 tableStyleClass="table table-striped"
                 [rows]="itemsPerPage"
                 [paginator]="true" 
@@ -38,17 +36,13 @@
                     <ng-template pTemplate="header">
                         <tr>
                             <th>S.No</th>
-                            
-                             <th pSortableColumn="EntityName" style="width:20%"> Print Id<p-sortIcon field="Entity Name"></p-sortIcon></th>
-                             <th pSortableColumn="EntityName" style="width:20%"> Document  Number<p-sortIcon field="Entity Name"></p-sortIcon></th>
-                             <th pSortableColumn="EntityName" style="width:20%"> Document Title <p-sortIcon field="Entity Name"></p-sortIcon></th>
-                             <th pSortableColumn="EntityName" style="width:20%"> Document Type<p-sortIcon field="Entity Name"></p-sortIcon></th>
-                             <th pSortableColumn="EntityName" style="width:20%"> No Of Copies<p-sortIcon field="Entity Name"></p-sortIcon></th>
-                             <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
-                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
-                             <th pSortableColumn="UserName" style="width:20%">Printed By<p-sortIcon field="User Name"></p-sortIcon></th>
-                              <th pSortableColumn="ModifiedDate" style="width:1n00px">Printed On<p-sortIcon field="ModifiedDate"></p-sortIcon></th>
-    
+                            <th pSortableColumn="Unique" style="width:20%"> Print Comments <p-sortIcon field="Unique"></p-sortIcon></th>
+                            <th pSortableColumn="EntityInfo.DocumentNumber" style="width:20%"> Document Number <p-sortIcon field="EntityInfo.DocumentNumber"></p-sortIcon></th>
+                            <th pSortableColumn="EntityInfo.documenttitle" style="width:20%"> Document Title <p-sortIcon field="EntityInfo.documenttitle"></p-sortIcon></th>
+                            <th pSortableColumn="EntityInfo.printtype" style="width:20%"> Document Type <p-sortIcon field="EntityInfo.printtype"></p-sortIcon></th>
+                            <th pSortableColumn="EntityInfo.noofcopies" style="width:20%"> No Of Copies <p-sortIcon field="EntityInfo.noofcopies"></p-sortIcon></th>
+                            <th pSortableColumn="UserName" style="width:20%"> Printed By <p-sortIcon field="UserName"></p-sortIcon></th>
+                            <th pSortableColumn="EntityInfo.CreatedDate" style="width:100px"> Printed On <p-sortIcon field="EntityInfo.CreatedDate"></p-sortIcon></th>
                         </tr>
                     </ng-template>
                     <ng-template pTemplate="body" let-doc let-i="rowIndex">
@@ -57,14 +51,10 @@
                             <td>
                                 <a [routerLink]="['/auditprinttaddpage']" [queryParams]="{ DocumentName: doc?.Unique }">{{doc?.Unique}}</a>
                             </td>
-                
                             <td>{{doc?.EntityInfo?.DocumentNumber}}</td>
                             <td>{{doc?.EntityInfo?.documenttitle}}</td>
                             <td>{{doc?.EntityInfo?.printtype}}</td>
                             <td>{{doc?.EntityInfo?.noofcopies}}</td>
-                           
-                            <!-- <td>{{doc?.Message }}</td>
-                            <td>{{doc?.Type }}</td> -->
                             <td>{{doc?.UserName}}</td>
                             <td>{{doc?.EntityInfo?.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</td>
                         </tr>
@@ -75,15 +65,7 @@
     </div>
 </div>
 
-
-
-
-
-
-
-
 <style>
-    /* Styles for .custom-input-group */
     .custom-input-group {
         background-color: white;
         display: flex;
@@ -92,38 +74,22 @@
         border-radius: 5px;
     }
     .custom-input-group-text {
-            background: white;
-            border: none;
-            padding: 0;
-            vertical-align: middle;
-        }
-
-        .custom-search-icon {
-            font-size: 14px;
-            margin-right: 5px;
-            margin-left: 9px;
-            color: #555;
-        }
-
-        .custom-input {
-            border: none;
-            padding: 5px;
-            vertical-align: middle;
-            background-color: white;
-            box-shadow: none;
-        }
-    </style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        background: white;
+        border: none;
+        padding: 0;
+        vertical-align: middle;
+    }
+    .custom-search-icon {
+        font-size: 14px;
+        margin-right: 5px;
+        margin-left: 9px;
+        color: #555;
+    }
+    .custom-input {
+        border: none;
+        padding: 5px;
+        vertical-align: middle;
+        background-color: white;
+        box-shadow: none;
+    }
+</style>
