--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -28,7 +28,7 @@
   </div>
  
   <div>
-  <p-table [hidden] #templatesTable ></p-table>
+  <p-table #templatesTable ></p-table>
   <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
   </div>
 
