--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/functional-profile-add-page/functional-profile-add-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/functional-profile-add-page/functional-profile-add-page.component.html
@@ -36,12 +36,12 @@
                             
                             <div class="row">
                                 <div class="col-sm-3">
-                                    <strong>Security Management:</strong>
+                                  <strong>Security Management:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.securityConfig">
+                                  <input type="checkbox" [checked]="auditConfig.EntityInfo.securityConfig" disabled>
                                 </div>
-                            </div>
+                              </div>
   
   
                         
@@ -50,7 +50,7 @@
                                     <strong>Role Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.roleConfig">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.roleConfig" disabled>
                                 </div>
                             </div>
                             
@@ -59,7 +59,7 @@
                                     <strong>Department Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.deptConfig">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.deptConfig" disabled>
                                 </div>
                             </div>
                             
@@ -68,7 +68,7 @@
                                     <strong>Plant Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.plantMgmt">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.plantMgmt" disabled>
                                 </div>
                             </div>
                             
@@ -77,7 +77,7 @@
                                     <strong>User Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.userMgmt">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.userMgmt" disabled>
                                 </div>
                             </div>
                             
@@ -86,7 +86,7 @@
                                     <strong>Activate/De-Activate:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.Activatestatus">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.Activatestatus" disabled>
                                 </div>
                             </div>
                             
@@ -95,7 +95,7 @@
                                     <strong>Document Type Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentTypeConfig">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentTypeConfig" disabled>
                                 </div>
                             </div>
                             
@@ -104,7 +104,7 @@
                                     <strong>Document Template Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentTemplateConfig">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentTemplateConfig" disabled>
                                 </div>
                             </div>
                             
@@ -113,7 +113,7 @@
                                     <strong>Workflow Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.workflowConfig">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.workflowConfig" disabled>
                                 </div>
                             </div>
                             
@@ -122,7 +122,7 @@
                                     <strong>Document Request Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentRequest">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentRequest" disabled>
                                 </div>
                             </div>
                             
@@ -131,7 +131,7 @@
                                     <strong>Document Preparation Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentPreperation">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentPreperation" disabled>
                                 </div>
                             </div>
                             
@@ -140,7 +140,7 @@
                                     <strong>Document Effective Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentEffective">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentEffective" disabled>
                                 </div>
                             </div>
                             
@@ -149,7 +149,7 @@
                                     <strong>Document Repository:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.additionalTasks">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.additionalTasks" disabled>
                                 </div>
                             </div>
                             
@@ -158,7 +158,7 @@
                                     <strong>Work Assigned To Me:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.workItemsassigned">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.workItemsassigned" disabled>
                                 </div>
                             </div>
                             
@@ -167,9 +167,20 @@
                                     <strong>Document Print Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.downloadPrint">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.downloadPrint" disabled>
                                 </div>
                             </div>
+
+
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <strong>Existing Document Request:</strong>
+                                </div>
+                                <div class="col-sm-9">
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.docrepository" disabled>
+                                </div>
+                            </div>
+
                             
                             <div class="row">
                                 <div class="col-sm-3">
