--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -41,7 +41,7 @@
                         <th pSortableColumn="CreatedBy" style="width:20%">Registered By<p-sortIcon field="CreatedBy"></p-sortIcon></th>
                         <th pSortableColumn="CreatedDate" style="width:200px">Registered On <p-sortIcon field="CreatedDate"></p-sortIcon></th>
                         <!-- <th pSortableColumn="Preview" style="width:200px">Preview <p-sortIcon field="Preview"></p-sortIcon></th> -->
-                        <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+                        <th pSortableColumn="Status" style="width:200px">Status</th>
                         <th style="width:80px">Actions</th>
 
                     </tr>
