--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -1,90 +1,82 @@
-
 <div class="container-fluid">
   <div class="row p-2">
-      <div class="col">
-          <div class="d-flex justify-content-between align-items-center">
-            <h4 class="page-title flex-grow-1">Document Print Request</h4>
-
-              <div class="back-icon" style="margin-right: 10px;">
-                  <a href="javascript:void(0);" onclick="history.back();">
-                      <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-                  </a>
-              </div>
-              
-              <div class="d-flex page-title-actions">
-                  <div class="input-group custom-input-group">
-                      <!-- Magnifying glass icon -->
-                      <span class="input-group-text custom-input-group-text">
-                          <i class="fas fa-search custom-search-icon"></i>
-                      </span>
-                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
-                  </div>
-                    
-                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPrint()" *ngIf="access">New</button>
-              </div>
+    <div class="col">
+      <div class="d-flex justify-content-between align-items-center">
+        <h4 class="page-title flex-grow-1">Document Print Request</h4>
+        <div class="back-icon" style="margin-right: 10px;">
+          <a href="javascript:void(0);" onclick="history.back();">
+            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+          </a>
+        </div>
+        <div class="d-flex page-title-actions">
+          <div class="input-group custom-input-group">
+            <!-- Magnifying glass icon -->
+            <span class="input-group-text custom-input-group-text">
+              <i class="fas fa-search custom-search-icon"></i>
+            </span>
+            <input type="text" class="form-control custom-input" pInputText (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')" placeholder="Search">
           </div>
+          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPrint()" *ngIf="access">New</button>
+        </div>
       </div>
+    </div>
   </div>
   <div class="row p-2">
-      <div class="col">
-          <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table #templatesTable
-            [value]="requests"
-            [globalFilterFields]="['printtype','documenttitle','documentNumber','noofcopies','Printed by','Print Count']"
-            tableStyleClass="table table-striped" [rows]="itemsPerPage"
-           [paginator]="true" [totalRecords]="requests.length"
-           [rowsPerPageOptions]="rowsPerPageOptions" >
-             <ng-template pTemplate="header">
-               <tr>
-                 <th>S.No</th>              
-                 <th pSortableColumn="printtype" style="width:20%">Document Type <p-sortIcon field="printtype"></p-sortIcon></th>
-                 <th pSortableColumn="documenttitle" style="width:25%">Document Name<p-sortIcon field="documenttitle"></p-sortIcon></th>
-                 <th pSortableColumn="documentNumber" style="width:20%">Document Number<p-sortIcon field="documentNumber"></p-sortIcon></th>
-                 <th pSortableColumn="modifiedDate" style="width:100px">Initiated By <p-sortIcon field="modifiedDate"></p-sortIcon></th>
-                 <!-- <th pSortableColumn="workflow" style="width:100px">Initiated by <p-sortIcon field="modifiedby"></p-sortIcon></th> -->
-                 <th pSortableColumn="noofcopies" style="width:100px">Requested Copies <p-sortIcon field="noofcopies"></p-sortIcon></th>
-                 <th pSortableColumn="printCount" style="width:100px">Print Count <p-sortIcon field="printCount"></p-sortIcon></th>
-                 <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th>
-                 <th style="width:80px">Modify</th>
-   
-               </tr>
-             </ng-template>
-             <ng-template pTemplate="body" let-doc let-i="rowIndex">
-               <tr>
-                 <td>{{ i + 1 }}</td>              
-                 <td>{{doc?.printtype}}</td>
-                 <td>{{doc?.documenttitle}}</td>
-                 <td>{{doc?.documentNumber}}</td>
-                 <!-- <td>{{doc?.modifiedDate}}</td> -->
-                 <td>{{doc?.modifiedBy}}</td>
-                 <td>{{doc?.noofcopies}}</td>
-                 <td>{{doc?.printCount}}</td>
-                 <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td>
-                 <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='In-Progress'"><i class="bi bi-pencil"></i></td>
-                  <td class="text-center" *ngIf="!access">
-                   <i class="bi bi-lock bi-lg" 
+    <div class="col">
+      <div class="p-4 bg-white shadow-dark rounded-2">
+        <p-table #templatesTable
+                 [value]="requests"
+                 [globalFilterFields]="['printtype','documenttitle','documentNumber','noofcopies','Printed by','Print Count','modifiedBy']"
+                 tableStyleClass="table table-striped"
+                 [rows]="itemsPerPage"
+                 [paginator]="true"
+                 [totalRecords]="requests.length"
+                 [rowsPerPageOptions]="rowsPerPageOptions">
+          <ng-template pTemplate="header">
+            <tr>
+              <th>S.No</th>
+              <th pSortableColumn="printtype" style="width:20%">Document Type <p-sortIcon field="printtype"></p-sortIcon></th>
+              <th pSortableColumn="documenttitle" style="width:25%">Document Name<p-sortIcon field="documenttitle"></p-sortIcon></th>
+              <th pSortableColumn="documentNumber" style="width:20%">Document Number<p-sortIcon field="documentNumber"></p-sortIcon></th>
+              <th pSortableColumn="modifiedBy" style="width:100px">Initiated By <p-sortIcon field="modifiedBy"></p-sortIcon></th>
+              <th pSortableColumn="noofcopies" class="text-center" style="width:100px">Requested Copies <p-sortIcon field="noofcopies"></p-sortIcon></th>
+              <th pSortableColumn="printCount" class="text-center" style="width:100px">Print Count <p-sortIcon field="printCount"></p-sortIcon></th>
+              <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+              <th style="width:80px">Modify</th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-doc let-i="rowIndex">
+            <tr>
+              <td>{{ i + 1 }}</td>
+              <td>{{doc?.printtype}}</td>
+              <td>{{doc?.documenttitle}}</td>
+              <td>{{doc?.documentNumber}}</td>
+              <td>{{doc?.modifiedBy}}</td>
+              <td class="text-center">{{doc?.noofcopies}}</td>
+              <td class="text-center">{{doc?.printCount}}</td>
+              <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td>
+              <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='In-Progress'"><i class="bi bi-pencil"></i></td>
+              <td class="text-center" *ngIf="!access">
+                <i class="bi bi-lock bi-lg" 
                    [ngClass]="{'text-primary':true}"  
                    title="No Permissions">
-                   </i>
-                 </td>
-                <td class="text-center" *ngIf="doc?.status==='Approved' && doc?.createdBy == userName">
-                   <i class="bi bi-lock bi-lg" 
+                </i>
+              </td>
+              <td class="text-center" *ngIf="doc?.status==='Approved' && doc?.createdBy == userName">
+                <i class="bi bi-lock bi-lg" 
                    [ngClass]="{'text-primary':true}"
                    title="Approved">
-                   </i>
-                   <span class="mx-2"></span> 
-                   <i class="bi bi-printer-fill" title="Print" (click)="viewprint(viewdoc,doc)"></i>
-                 </td>
-               </tr>
-             </ng-template>
-           </p-table>
-          </div>
+                </i>
+                <span class="mx-2"></span> 
+                <i class="bi bi-printer-fill" title="Print" (click)="viewprint(viewdoc,doc)"></i>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
       </div>
+    </div>
   </div>
 </div>
-
-
-
 
 <ng-template #template1>
   <div class="modal-header">
@@ -94,82 +86,71 @@
     </button>
   </div>
   <div class="modal-body">
-      <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
-    </div>
+    <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
+  </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" (click)="closeModel()">Close</button>
   </div>
 </ng-template>
 
 <ng-template #viewdoc>
-  <!-- <div class="modal-dialog" role="document"> -->
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">View/Print Document</h4>
+  <div class="modal-content">
+    <div class="modal-header">
+      <h4 class="modal-title">View/Print Document</h4>
+    </div>
+    <div class="modal-body">
+      <div class="form-group">
+        <input type="radio" class="form-radio-input" id="fullheader" name="fullheader" [(ngModel)]="iscompleteheader" [value]="true">
+        <label for="fullheader" class="form-label" style="padding-left: 10px;">Complete Header</label>
       </div>
-      <div class="modal-body">
-        <div class="form-group">
-         
-          <input type="radio" class="form-radio-input"  id="fullheader" name="fullheader"  [(ngModel)]="iscompleteheader" [value]="true">
-          <label for="username" class="form-label" style="padding-left: 10px;">Complete Header</label>
-        </div>
-        <div class="form-group">
-         
-          <input type="radio" class="form-radio-input" id="fullheader" name="fullheader"  [(ngModel)]="iscompleteheader" [value]="false">
-          <label for="password" style="padding-left: 10px;">Short Header</label>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="modalRef!.hide()">Close</button>
-        <button type="button" class="btn btn-success" (click)="previewtemplate(template1)">Submit</button>
+      <div class="form-group">
+        <input type="radio" class="form-radio-input" id="shortheader" name="fullheader" [(ngModel)]="iscompleteheader" [value]="false">
+        <label for="shortheader" style="padding-left: 10px;">Short Header</label>
       </div>
     </div>
-  <!-- </div> -->
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" (click)="modalRef!.hide()">Close</button>
+      <button type="button" class="btn btn-success" (click)="previewtemplate(template1)">Submit</button>
+    </div>
+  </div>
 </ng-template>
-
 
 <style>
   /* Styles for .custom-input-group */
   .custom-input-group {
-      background-color: white;
-      display: flex;
-      align-items: center;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
   }
   .custom-input-group-text {
-          background: white;
-          border: none;
-          padding: 0;
-          vertical-align: middle;
-      }
-
-      .custom-search-icon {
-          font-size: 14px;
-          margin-right: 5px;
-          margin-left: 9px;
-          color: #555;
-      }
-
-      .custom-input {
-          border: none;
-          padding: 5px;
-          vertical-align: middle;
-          background-color: white;
-          box-shadow: none;
-      }
-  </style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    background: white;
+    border: none;
+    padding: 0;
+    vertical-align: middle;
+  }
+  .custom-search-icon {
+    font-size: 14px;
+    margin-right: 5px;
+    margin-left: 9px;
+    color: #555;
+  }
+  .custom-input {
+    border: none;
+    padding: 5px;
+    vertical-align: middle;
+    background-color: white;
+    box-shadow: none;
+  }
+  .w-150 {
+    width: 150px;
+  }
+  .p-paginator .p-dropdown {
+    height: unset;
+  }
+  :host ::ng-deep .p-paginator .p-dropdown {
+    height: unset;
+    min-width: unset;
+  }
+</style>
