--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -124,13 +124,20 @@
             </div>
           </div>
 
-          <div class="form-group row" *ngIf="viewMode">
-            <label for="Reason" class="col-sm-2 col-form-label">Reason(s)/Remark(s)</label>
+
+
+          <div *ngIf="viewMode" class="form-group row">
+            <label for="reason" class="col-sm-2 col-form-label">Reason(s)/Remark(s)<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
-              <textarea class="form-control mw-350" id="Reason" name="Reason" rows="3" placeholder="Reason"
-                        [(ngModel)]="effective.reason" [disabled]="viewMode"></textarea>
-            </div>        
-        </div>
+              <input type="text" class="form-control" id="reason" name="reason"
+              [(ngModel)]="effective.reason" #reasonInput="ngModel" [required]="true"/>
+                <div *ngIf="reasonInput.invalid && (reasonInput.dirty || reasonInput.touched)" class="text-danger">
+                  Reason(s)/Remark(s) is Required. 
+                </div>
+            </div>
+          </div>
+          
+          
           <!-- <div class="form-group row">
             <label for="workflow" class="col-sm-2 col-form-label"
               >Workflow</label
@@ -164,7 +171,7 @@
             </button>
             <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="!fm.form.valid || isButtonDisabled">Submit</button>
 
-            <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="Proceed(eSignModal)">Proceed</button>
+            <button type="button" class="col-xs-1 mx-2  btn btn-success" [disabled]="!fm.form.valid || isButtonDisabled" *ngIf="viewMode && !iscompleted" (click)="Proceed(eSignModal)">Proceed</button>
             <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="return(eSignModal)">Return</button>
             <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject(eSignModal)">Reject</button> -->
 
