--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -166,21 +166,12 @@
               </div>
               <div *ngIf="isUploaded || viewMode" class="col-sm-9 pull-right">
                 {{preparation.documentno}}.docx
-                <button type="button" class="btn btn-primary mx-2" (click)="viewprint(template,viewdoc)">View Documnet</button>
-                <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile()" [disabled]="viewMode" *ngIf="!viewMode">Delete</button>
+                <button type="button" class="btn btn-primary mx-2" (click)="previewtemplate(template,viewdoc)">View Document</button>
+                <button type="button" class="btn btn-danger mx-2" *ngIf="!viewMode" (click)="onDeleteFile()">Delete</button>
               </div>
-
-
-              
             </div>
-
-            <div class="form-group row" *ngIf="viewMode" >
-              <label for="Reason" class="col-sm-2 col-form-label">Reason</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="Reason" name="Reason"
-                       [(ngModel)]="preparation.reason"   />             
-              </div>        
-          </div>
+            
+         
 
             <div class="form-group row">
               <label for="Details" class="col-sm-2 col-form-label">Details</label>
@@ -189,6 +180,24 @@
                           [(ngModel)]="preparation.details" [disabled]="viewMode"></textarea>
               </div>
             </div>
+
+
+
+
+
+          <div *ngIf="viewMode" class="form-group row">
+            <label for="reason" class="col-sm-2 col-form-label">Reason(s)/Remark(s)<span style="color: red; font-weight: bolder;">*</span></label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="reason" name="reason"
+              [(ngModel)]="preparation.reason" #reasonInput="ngModel" [required]="true"/>
+                <div *ngIf="reasonInput.invalid && (reasonInput.dirty || reasonInput.touched)" class="text-danger">
+                  Reason(s)/Remark(s) is Required. 
+                </div>
+            </div>
+          </div>
+
+
+
           </div>
 
 
@@ -202,7 +211,7 @@
               <!--[disabled]="!fm.form.valid || !preparation.document"-->
               <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="!fm.form.valid || isButtonDisabled">Submit</button>
         
-              <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="proceed(esign)">Proceed</button>
+              <button type="button" class="col-xs-1 mx-2  btn btn-success" [disabled]="!fm.form.valid || isButtonDisabled" *ngIf="viewMode && !iscompleted" (click)="proceed(esign)">Proceed</button>
               <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="return(esign)">Return</button>
               <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject(esign)">Reject</button> -->
         
