--- a/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
@@ -90,7 +90,7 @@
 
       </div>
     </div>
-    <div *ngIf="viewreminderDocs" class="col-lg-3" >
+    <div *ngIf="viewreminderDocs && userName == 'admin'" class="col-lg-3" >
       <div class="reminder">
         <div class="reminder__header">
           <p class="reminder__header-text">Upcoming Reminder</p>
