--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -370,7 +370,7 @@
             >
               Cancel
             </button>
-            <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid || isButtonDisabled" >{{editMode?'Update':'Submit'}}</button>          </div>
+            <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid || isButtonDisabled || !fm.form.dirty" >{{editMode?'Update':'Submit'}}</button>          </div>
         </div>
       </form>
     </div>
