--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -1,106 +1,108 @@
-<div  class="container-fluid">
+<div class="container-fluid">
   <div class="row p-2">
-      <div class="col">
-          <div class="d-flex justify-content-between align-items-center">
-              <h4 class="page-title flex-grow-1">Existing Document Request Configuration</h4>
+    <div class="col">
+      <div class="d-flex justify-content-between align-items-center">
+        <h4 class="page-title flex-grow-1">Existing Document Request Configuration</h4>
 
-              <div class="back-icon" style="margin-right: 10px;">
-                  <a *ngIf="!pdfUrl" href="javascript:void(0);" onclick="history.back();">
-                      <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-                  </a>
-                  <a *ngIf="pdfUrl" href="javascript:void(0);" (click)="pdfUrl= null">
-                    <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-                </a>
-              </div>
-              
-              <div *ngIf="!pdfUrl" class="d-flex page-title-actions">
-                  <div class="input-group custom-input-group">
-                      <!-- Magnifying glass icon -->
-                      <span class="input-group-text custom-input-group-text">
-                          <i class="fas fa-search custom-search-icon"></i>
-                      </span>
-                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="249">
-                  </div>                    
-                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()" *ngIf="access">New</button>
-              </div>
+        <div class="back-icon" style="margin-right: 10px;">
+          <a *ngIf="!pdfUrl" href="javascript:void(0);" onclick="history.back();">
+            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+          </a>
+          <a *ngIf="pdfUrl" href="javascript:void(0);" (click)="pdfUrl= null">
+            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+          </a>
+        </div>
+
+        <div *ngIf="!pdfUrl" class="d-flex page-title-actions">
+          <div class="input-group custom-input-group">
+            <!-- Magnifying glass icon -->
+            <span class="input-group-text custom-input-group-text">
+              <i class="fas fa-search custom-search-icon"></i>
+            </span>
+            <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')" placeholder="Search" maxlength="249">
           </div>
+          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()" *ngIf="access">New</button>
+        </div>
       </div>
-  </div>
- 
-  <div>
-  <p-table #templatesTable ></p-table>
-  <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
+    </div>
   </div>
 
-  <div *ngIf="!pdfUrl" class="row p-2">
-      <div class="col">
-          <div class="p-4 bg-white shadow-dark rounded-2">
-              <p-table #templatesTable  [value]="existingDocDatasource" 
-              [globalFilterFields]="['edrId', 'documenttitle', 'documentno','documenttype','Status']"
-              tableStyleClass="table table-striped" [rows]="itemsPerPage"
+  <!--<div>-->
+    <!--<p-table #templatesTable></p-table>-->
+    <!--<iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>-->
+  <!--</div>-->
+
+  <div class="row p-2">
+    <div class="col">
+      <div class="p-4 bg-white shadow-dark rounded-2">
+        <p-table #templatesTable [value]="existingDocDatasource"
+                 [globalFilterFields]="['edrId', 'documenttitle', 'documentno','documenttype','Status']"
+                 tableStyleClass="table table-striped" [rows]="itemsPerPage"
                  [paginator]="true" [totalRecords]="existingDocDatasource.length"
-                  [rowsPerPageOptions]="rowsPerPageOptions" >
-            <ng-template pTemplate="header">
-              <tr>
-                <th>S.No</th>
-                <!-- <th pSortableColumn="edrId" style="width:20%">Request Code<p-sortIcon field="edrId"></p-sortIcon></th> -->
-                <th pSortableColumn="documentno" style="width:10%">Document No. <p-sortIcon field="documentno"></p-sortIcon></th>
-                <th pSortableColumn="documenttitle" style="width:10%">Document Name<p-sortIcon field="documenttitle"></p-sortIcon></th>
-                <th pSortableColumn="documenttype" style="width:10%">Document Type<p-sortIcon field="documenttype"></p-sortIcon></th>
-                <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
-                <th pSortableColumn="effectiveDate" style="width:20%">Effective Date<p-sortIcon field="effectiveDate"></p-sortIcon></th>
-                <th pSortableColumn="reviewDate" style="width:200px">Review Date<p-sortIcon field="reviewDate"></p-sortIcon></th>
-                <!-- <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
-<th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th> -->
-                <!-- <th style="width:80px">Actions</th> -->
-                <th style="width:80px">Preview Document</th>
+                 [rowsPerPageOptions]="rowsPerPageOptions">
+          <ng-template pTemplate="header">
+            <tr>
+              <th>S.No</th>
+              <!-- <th pSortableColumn="edrId" style="width:20%">Request Code<p-sortIcon field="edrId"></p-sortIcon></th> -->
+              <th pSortableColumn="documentno" style="width:10%">Document No. <p-sortIcon field="documentno"></p-sortIcon></th>
+              <th pSortableColumn="documenttitle" style="width:10%">Document Name<p-sortIcon field="documenttitle"></p-sortIcon></th>
+              <th pSortableColumn="documenttype" style="width:10%">Document Type<p-sortIcon field="documenttype"></p-sortIcon></th>
+              <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
+              <th pSortableColumn="effectiveDate" style="width:20%">Effective Date<p-sortIcon field="effectiveDate"></p-sortIcon></th>
+              <th pSortableColumn="reviewDate" style="width:200px">Review Date<p-sortIcon field="reviewDate"></p-sortIcon></th>
+              <!-- <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
+              <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th> -->
+              <!-- <th style="width:80px">Actions</th> -->
+              <th style="width:80px">Preview Document</th>
 
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-existingdoc let-i="rowIndex">
-              <tr>
-                <td>{{ i + 1 }}</td>
-                <!-- <td>{{existingdoc?.edrId}}</td> -->
-                <td>{{existingdoc?.documentno}}</td>
-                <td>{{existingdoc?.documenttitle}}</td>
-                <td>{{existingdoc?.documenttype}}</td>
-                <td>{{existingdoc?.department}}</td>
-                <td>{{existingdoc?.effectiveDateValue}}</td>
-                <!-- <td *ngIf ="existingdoc?.reviewDate=='1/1/1900 12:00:00 AM'">NA</td>
-<td *ngIf="existingdoc?.reviewDate!='1/1/1900 12:00:00 AM'">{{existingdoc?.reviewDate| date}}</td> -->
-                <td>{{existingdoc?.reviewDateValue}}</td>
-                <!-- <td>{{existingdoc?.approvedby}}</td>
-<td>{{existingdoc?.approvedOn| date}}</td> -->
-                <!-- <td class="text-center" *ngIf="access">
-                  <i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i>
-                </td> -->
-                <td *ngIf="!access">
-                  <i class="bi bi-lock bi-lg"
-                     [ngClass]="{'text-primary':true}"
-                     title="No Permissions">
-                  </i>
-                </td>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-existingdoc let-i="rowIndex">
+            <tr>
+              <td>{{ i + 1 }}</td>
+              <!-- <td>{{existingdoc?.edrId}}</td> -->
+              <td>{{existingdoc?.documentno}}</td>
+              <td>{{existingdoc?.documenttitle}}</td>
+              <td>{{existingdoc?.documenttype}}</td>
+              <td>{{existingdoc?.department}}</td>
+              <td>{{existingdoc?.effectiveDateValue}}</td>
+              <!-- <td *ngIf ="existingdoc?.reviewDate=='1/1/1900 12:00:00 AM'">NA</td>
+              <td *ngIf="existingdoc?.reviewDate!='1/1/1900 12:00:00 AM'">{{existingdoc?.reviewDate| date}}</td> -->
+              <td>{{existingdoc?.reviewDateValue}}</td>
+              <!-- <td>{{existingdoc?.approvedby}}</td>
+              <td>{{existingdoc?.approvedOn| date}}</td> -->
+              <!-- <td class="text-center" *ngIf="access">
+                <i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i>
+              </td> -->
+              <td *ngIf="!access">
+                <i class="bi bi-lock bi-lg"
+                   [ngClass]="{'text-primary':true}"
+                   title="No Permissions">
+                </i>
+              </td>
 
-                <td>
-                  <a href="javascript:void(0);" (click)="previewtemplate(existingdoc)">Preview</a>
-                </td>
-              </tr>
-            </ng-template>
+              <td>
+                <a href="javascript:void(0);" (click)="previewtemplate(existingdoc,template)">Preview</a>
+              </td>
+            </tr>
+          </ng-template>
         </p-table>
-          </div>
       </div>
+    </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!--Preview Document Template-->
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Preview</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModel()">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" (click)="closeModel()">Close</button>
+  </div>
+</ng-template>
