Changes of issues

--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -132,7 +132,7 @@
                 optionLabel="DepartmentName"
                 display="chip"
                 [required]="true"
-                #departmentInput="ngModel"  [disabled]="true">
+                #departmentInput="ngModel">
               </p-multiSelect>
               <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
                 Department is required
